fix word-wrap sidebar

--- a/wp-content/themes/deasil/assets/css/main.css
+++ b/wp-content/themes/deasil/assets/css/main.css
@@ -4777,7 +4777,7 @@ blockquote h6 {
   top: 3px;
 }
 .sidebar ul li:not(.chosen) a {
-  word-break: break-all;
+  /*word-break: break-all;*/
 }
 .sidebar ul ul {
   margin-top: 15px;
